TM-2138 : Resolved issue that  JQGrid headers have bleed through using IE when scrolling off the page.
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@3614 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -652,6 +652,7 @@ margin: -8px !important;
 .ui-jqgrid-htable thead {
 	z-index: 15 !important;
 	border-bottom: 1px solid #CCCCCC !important;
+	background-color: white !important;
 }
 .SuffleImage {
 	height: 16px;
